[package]
name    = "dwm1001"
version = "0.1.0"
authors = ["Hanno Braun <hanno@braun-robotics.com>"]
edition = "2018"


[dependencies]
cortex-m             = { version = "0.5.4", features = [ "const-fn" ] }
cortex-m-rt          = "0.6.3"
cortex-m-semihosting = "0.3.0"
embedded-hal         = "0.2.1"

[dependencies.dw1000]
# git = "https://github.com/braun-robotics/rust-dw1000.git"
# rev = "ee610bcedfde9c7f79b7b05375c5a3a5d70dfb9d"
path = "../rust-dw1000"

[dependencies.nrf52832-hal]
# version = "0.6.0-beta.4"
# git = "https://github.com/nrf-rs/nrf52-hal.git"
# rev = "d94c020e8d3561b6cb00821f2df292857532464b"
path = "../nrf52-hal/nrf52832-hal"


[dev-dependencies]
heapless          = "0.3.7"
nb                = "0.1.1"
# panic-semihosting = "0.5.0"
panic-halt = "0.2"

[features]
dev         = []                  # expose features of DWM1001-Dev board
rt          = ["nrf52832-hal/rt"]
semihosting = []                  # enable debug output in some examples


[[example]]
name              = "blink"
required-features = ["dev", "rt"]

[[example]]
name              = "dw1000_delayed_tx"
required-features = ["dev", "rt"]

[[example]]
name              = "dw1000_id"
required-features = ["dev", "rt"]

[[example]]
name              = "dw1000_only_rx"
required-features = ["dev", "rt"]

[[example]]
name              = "dw1000_only_tx"
required-features = ["dev", "rt"]

[[example]]
name              = "dw1000_ranging_anchor"
required-features = ["dev", "rt"]

[[example]]
name              = "dw1000_ranging_tag"
required-features = ["dev", "rt"]

[[example]]
name              = "dw1000_reg_modify"
required-features = ["dev", "rt"]

[[example]]
name              = "dw1000_reg_rw"
required-features = ["dev", "rt"]

[[example]]
name              = "dw1000_reg_short"
required-features = ["dev", "rt"]

[[example]]
name              = "dw1000_rx_tx"
required-features = ["dev", "rt"]

[[example]]
name              = "dw1000_subreg"
required-features = ["dev", "rt"]

[[example]]
name              = "dw1000_subreg_ext_addr"
required-features = ["dev", "rt"]

[[example]]
name              = "lis2dh12"
required-features = ["dev", "rt"]


[profile.release]
debug = true
codegen-units = 1
lto           = true
opt-level     = 3
