[package]
name = "rtfm-hal"
version = "0.1.0"
authors = ["James Munns <james.munns@ferrous-systems.com>"]
edition = "2018"

[dependencies]
panic-halt = "0.2"
embedded-hal = "0.2"
cortex-m = "0.5"
heapless = "0.4"

[dependencies.cortex-m-rtfm]
version = "0.4"
features = ["timer-queue"]

[dependencies.nrf52832-hal]
version = "0.6"

[dependencies.nrf52832-pac]
version = "0.6"
